--- a/launchers/Makefile.am
+++ b/launchers/Makefile.am
@@ -4,19 +4,21 @@
 
 INCLUDES = -I$(top_srcdir) -I$(top_builddir) -I. $(LAUNCHER_CFLAGS) -DG_DISABLE_CONST_RETURNS
 
+DEFS += $(strip                         		\
+        -DBINDIR=\"$(bindir)\" 				\
+)
+
 #
 # programs to build
 #
-#bin_PROGRAMS = beast bsesh
-#beast_SOURCES = suidmain.c
-#bsesh_SOURCES = suidmain.c
-# SUIDMAIN_EXECUTABLE=\"$(bindir)/@BEAST_BINARY@\"
-# SUIDMAIN_EXECUTABLE=\"$(bindir)/@BSESH_BINARY@\"
+bin_PROGRAMS = beast bsesh
+beast_SOURCES = suidmain.c beaststart.c
+bsesh_SOURCES = suidmain.c bseshstart.c
 
 #
 # make bsesh wrapper suid to allow renicing
 #
-install-exec-local: # install-binPROGRAMS
+install-exec-local: install-binPROGRAMS
 	true \
 	&& ( chown root $(bindir)/beast $(bindir)/bsesh   \
 	&&   chmod 4755 $(bindir)/beast $(bindir)/bsesh ) \
