added missing sources
svn path=/trunk/; revision=2056

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -52,14 +52,41 @@ beast-gtk/gxk/gxksimplelabel.c
 bse/bseamplifier.idl
 bse/bseautodoc.c
 bse/bsebiquadfilter.c
+bse/bseconstant.c
+bse/bseinstrumentinput.c
+bse/bseinstrumentoutput.c
+bse/bsemidicontroller.c
+bse/bsemidiinput.c
+bse/bsemidivoice.c
+bse/bsepcminput.c
+bse/bsepcmoutput.c
 bse/bserecords.idl
+bse/bsesnooper.c
 bse/bsestandardosc.c
+bse/bsesubiport.c
+bse/bsesuboport.c
+bse/bsesubsynth.c
 bse/bsesuper.c
+bse/bsewaveosc.c
 data/beast.desktop.in
 data/bse.keys.in
 plugins/artscompressor.idl
+plugins/bseadder.c
+plugins/bseatandistort.c
 plugins/bsebalance.idl
+plugins/bsefirfilter.c
 plugins/bseiirfilter.c
+plugins/bsemixer.c
+plugins/bsemult.c
+plugins/bsenoise.c
+plugins/bsesequencer.c
+plugins/bsesimpleadsr.c
 plugins/davbassfilter.idl
+plugins/davcanyondelay.c
 plugins/davchorus.idl
+plugins/davguitar.c
+plugins/davorgan.c
+plugins/davsyndrum.c
+plugins/davxtalstrings.c
 plugins/evaluator/bseevaluator.idl
+plugins/freeverb/bsefreeverb.c
