provide namespace to BSE_CXX_DECLARED_*_TYPE() macro generations. fix
Mon Mar  1 23:33:56 2004  Tim Janik  <timj@gtk.org>

        * sfidl-corecxx.cc: provide namespace to BSE_CXX_DECLARED_*_TYPE()
        macro generations. fix to_rec() and to_seq() method generations
        by using SFI types instead of boxed types for the resulting record
        fields. provide resizing constructor for egenrated sequences.
        initialize GEnumValue values from actual enum value symbols.
        assign implementation values as specified in the idl files to
        enum value symbols, since this is a core binding.

        * sfidl-corec.cc: turned the core-c binding into a C++ wrapper that
        depends on the core-cxx binding. lots of cleanups and fixes.

        * sficxx.h: added set_boxed() method to record handles.

        * Makefile.am: generate a testidl binding with --host-c as
        --core-c depends on a C++ binding.

        * testsfi.c: disabled tests that depend on the old --core-c.

svn path=/trunk/; revision=2066

--- a/sfi/Makefile.am
+++ b/sfi/Makefile.am
@@ -57,10 +57,10 @@ temp_files =  xgen-tih xgen-tic xgen-sch
 CLEANFILES += $(temp_files)
 CLEANFILES += testidl.h testidl.c
 testidl.h: $(srcdir)/testidl.idl sfidl
-	$(SFIDL) --core-c --header $(srcdir)/testidl.idl > xgen-tih \
+	$(SFIDL) --host-c --header $(srcdir)/testidl.idl > xgen-tih \
 	&& mv xgen-tih testidl.h
 testidl.c: $(srcdir)/testidl.idl sfidl
-	$(SFIDL) --core-c --source --init test_types_init $(srcdir)/testidl.idl > xgen-tic \
+	$(SFIDL) --host-c --source --init test_types_init $(srcdir)/testidl.idl > xgen-tic \
 	&& mv xgen-tic testidl.c
 EXTRA_DIST += testidl.idl
 
