adapt to BseItemSeq changes.
Mon Mar  1 20:00:57 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstparam-proxy.c:
        * beast-gtk/bstparam.h:
        * beast-gtk/bstsnetrouter.c:
        * beast-gtk/bsttracksynthdialog.[hc]:
        * bsttrackview.c:
        * bsttreestores.c:
        * beast-gtk/bstapp.c: adapt to BseItemSeq changes.

        * bsw/Makefile.am: stop building mkapi which is broken and unused.

        * tests/Makefile.am: added SFIDL dependancy for sfidl generated sources.

svn path=/trunk/; revision=2068

--- a/bsw/Makefile.am
+++ b/bsw/Makefile.am
@@ -115,12 +115,12 @@ all: # TAGS
 #
 # other programs, we want to compile
 #
-noinst_PROGRAMS = mkapi testbsw
+noinst_PROGRAMS = testbsw # mkapi
 # link programs against BSW
 progs_LDADD = $(top_builddir)/bse/libbse.la $(top_builddir)/sfi/libsfi.la
 # source files
-mkapi_SOURCES = mkapi.c cxxdummy.cc
-mkapi_LDADD = $(progs_LDADD)
+#mkapi_SOURCES = mkapi.c cxxdummy.cc
+#mkapi_LDADD = $(progs_LDADD)
 $(srcdir)/testbsw.c: bswgenapi.h
 testbsw_SOURCES = testbsw.c cxxdummy.cc
 testbsw_LDADD = libbsw.la $(progs_LDADD)
