support --print-dir=prefix option.
Sun May  2 19:59:39 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstmain.c: support --print-dir=prefix option.

        * data/Makefile.am: provide BST_PATH_PREFIX in config-paths.h.

svn path=/trunk/; revision=2152

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -79,6 +79,7 @@ config-paths.h: $(top_builddir)/config.status Makefile
 	&& echo "#define BST_PATH_LOCALE          \"${beastlocaledir}\"" >> xgen-cph \
 	&& echo "#define BST_PATH_KEYS            \"${beastkeysdir}\"" >> xgen-cph \
 	&& echo "#define BST_PATH_SKINS           \"${beastskinsdir}\"" >> xgen-cph \
+	&& echo "#define BST_PATH_PREFIX          \"${prefix}\"" >> xgen-cph \
 	&& echo >> xgen-cph \
 	&& echo "/* Generated data ends here */" >> xgen-cph \
 	&& (cp xgen-cph $@) \
