grep for new debugging statements sfi_debug() and sfi_debug_check().
Wed May  5 15:19:46 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/Makefile.am: grep for new debugging statements
        sfi_debug() and sfi_debug_check().

        * beast-gtk/bstmain.c: adapt to new debugging code.
        install log message dialog handler.
        support $BST_NO_DEBUG, $BEAST_NO_DEBUG and --no-debug.

        * beast-gtk/bstusermessage.c: adapt to BSE message type
        changes. provide log message handler for new debug system.

        * beast-gtk/icons/diag.*: new diagnostics dialog icon.

        * *.c: adapted log, error, warning and debugging messages.

svn path=/trunk/; revision=2156

--- a/beast-gtk/Makefile.am
+++ b/beast-gtk/Makefile.am
@@ -152,9 +152,9 @@ debug_key_globs = $(top_srcdir)/beast-gtk/*.[hc] $(top_srcdir)/bse/*.[hc] $(top_
 bstdebugkeys.defs: @DVLBUILD@ $(debug_key_globs)
 	cd $(srcdir) \
 	&& echo > xgen-bdkd \
-	&& grep -E 'sfi_debug_(keyfunc|test_key)' $(debug_key_globs) \
-	| $(SCANKEYS) --key sfi_debug_keyfunc --key sfi_debug_test_key \
-	     --tmplstart '#define BST_LOG_SCAN_KEYS \\\n' \
+	&& grep -E 'sfi_debug(|_check)\b' $(debug_key_globs) \
+	| $(SCANKEYS) --key sfi_debug --key sfi_log_check \
+	     --tmplstart '#define BST_LOG_DEBUG_KEYS \\\n' \
 	     --tmplkey   '  %s, \\\n' \
 	     --tmplend   '\n' 	--needkeys - >> xgen-bdkd \
 	&& cp xgen-bdkd $@ \
