got rid of BsePixdata.
Thu May 20 13:36:35 2004  Tim Janik  <timj@gtk.org>

        * bsedefs.h: got rid of BsePixdata.

        * bseexports.h: provide means for export nodes to fill in
        translatable strings through a callback.

        * bseplugin.[hc]: register internationalized categories and invoke a
        callback to retrieve type blurb/authors/license strings.

        * mkcproc.pl:
        * bseladspa.c:
        * bsecxxutils.cc:
        * bsescripthelper.c:
        * bsecategories.[hc]: added internationalized category strings
        to registration functions. got rid of BsePixData. fixed callers.
        (bse_categories_register_stock_module): new function to register
        internal modules and do the right thing wrg translation.

        * bsecxxplugin.h: provide a callback function to fill in translatable
        strings of export node structures, so gettext isn't invoked until
        after bse has been initialized.

        * bsesnooper.c:
        * bsestandardosc.c:
        * bsesubiport.c:
        * bsesuboport.c:
        * bsesubsynth.c:
        * bseconstant.c:
        * bsebiquadfilter.c:
        * bseinstrumentinput.c:
        * bseinstrumentoutput.c:
        * bsemidicontroller.c:
        * bsemidiinput.c:
        * bsepcminput.c:
        * bsepcmoutput.c:
        * bsewaveosc.c:
        register objects with bse_categories_register_stock_module() and
        changed code to use generated pixstream files in icons/.

        * bsemain.c: properly assert that the textdomain is setup (bse
        was initialized) when translating a string.

        * bseutils.[hc]: moved BsePixdata from public API to private helper.

        * icons/Makefile.am: got rid of CVS hosted .c images and Makefile.icons.
        generate C source image files from .png files directly.

        * icons/*.c: removed all CVS hosted C sources.

        * icons/*.png: added png files for all required C sources.

svn path=/trunk/; revision=2167

--- a/bse/icons/Makefile.am
+++ b/bse/icons/Makefile.am
@@ -1,32 +1,58 @@
 # BSE-Plugins - Bedevilled Sound Engine dynamic Plugins
-# Copyright (C) 1998, 1999 Olaf Hoehmann and Tim Janik
+# Copyright (C) 1998-2004 Tim Janik
 #
 ## Makefile.am for BSE icons
 
-icon_pattern = *.png *.xcf *.c
-icon_list = 
-
-# create icon list
-Makefile.icons: $(icon_pattern) Makefile.am
-	cd $(srcdir) \
-	&& echo "## Generated data (by make $@)" > $@ \
-	&& for f in $(icon_pattern) ; do \
-	    echo "icon_list += $$f" >>$@ ; \
-	done \
-	&& echo "## Generated data ends here" >> $@
-
-EXTRA_DIST += $(strip \
-	$(icon_list) \
+# extra images to ship with tarballs
+EXTRA_IMAGES = $(strip		\
+	ampctrl.xcf		\
+	const.xcf		\
+	instrument.xcf		\
+	mic.xcf			\
+	osc.xcf			\
+	snet.xcf		\
+	song.xcf		\
+	virtual.xcf		\
+	ball.xcf		\
+	disconnect.xcf		\
+	keyboard.xcf		\
+	midi.xcf		\
+	sheet.xcf		\
+	snooper.xcf		\
+	speaker.xcf		\
+	waveosc.xcf		\
 )
 
-## include generated icon list Makefile
-include Makefile.icons
+# source images to build C source from
+SRC_IMAGES = $(strip		\
+	biquad.png		\
+	const.png		\
+	midi-ctrl-input.png	\
+	instrument.png		\
+	mono-synth.png		\
+	mic.png			\
+	speaker.png		\
+	snooper.png		\
+	osc.png			\
+	keyboard.png		\
+	virtual-input.png	\
+	virtual-output.png	\
+	virtual-synth.png	\
+	waveosc.png		\
+)
 
-## Makefile.plugins contains a generated make rule list of the *.c
-## files in this directory, e.g. it'd list a given foo.c as:
-##
-##foo_la_SOURCES = foo.c
-##foo_la_LDFLAGS = -module -avoid-version
-##foo_la_LIBADD  = $(plugin_libs)
-##
-##plugin_LTLIBRARIES += foo.la
+# function to generate C name from a filename
+MAKE_CNAME = $(subst .,_,$(subst -,_,$(notdir $(basename $(1)))))
+
+# generate .c files for all of SRC_IMAGES
+GDK_PIXBUF_CSOURCE=gdk-pixbuf-csource
+%.c: %.png
+	$(GDK_PIXBUF_CSOURCE) --name=$(call MAKE_CNAME,$(<F))_pixstream $< >xgen-$(@F)-temp && cp xgen-$(@F)-temp $@ && rm -f xgen-$(@F)-temp
+noinst_DATA = $(SRC_IMAGES:.png=.c)
+CLEANFILES = $(noinst_DATA)
+
+# ship images with tarballs
+EXTRA_DIST += $(strip 	\
+	$(EXTRA_IMAGES)	\
+	$(SRC_IMAGES) 	\
+)
