prefix $(bindir) with $(DESTDIR) to allow installations in chroot-ed
Mon May 31 16:37:38 2004  Tim Janik  <timj@gtk.org>

        * launchers/Makefile.am: prefix $(bindir) with $(DESTDIR) to allow
        installations in chroot-ed environments (package building).
        use install-exec-hook: to set suid permissions.
        changes suggested by Sam Hocevar.

svn path=/trunk/; revision=2180

--- a/launchers/Makefile.am
+++ b/launchers/Makefile.am
@@ -19,9 +19,8 @@ EXTRA_DIST += suidmain.h
 #
 # make bsesh wrapper suid to allow renicing
 #
-install-exec-local: install-binPROGRAMS
+install-exec-hook:	# runs after install-binPROGRAMS
 	true \
-	&& ( chown root $(bindir)/beast $(bindir)/bsesh   \
-	&&   chmod 4755 $(bindir)/beast $(bindir)/bsesh ) \
+	&& ( chown root $(DESTDIR)$(bindir)/beast $(DESTDIR)$(bindir)/bsesh   \
+	&&   chmod 4755 $(DESTDIR)$(bindir)/beast $(DESTDIR)$(bindir)/bsesh ) \
 	|| ( echo "*** WARNING *** beast and bsesh need to be installed as root to allow renicing ***" && sleep 5 )
-
