fix full vs. whole note wording. add 1/32, 1/64, 1/128 note lengths and
Wed Jun  9 18:36:53 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstpianorollctrl.c: fix full vs. whole note wording.
        add 1/32, 1/64, 1/128 note lengths and quantization boundaries.

        * beast-gtk/bsttrackrollctrl.c: fix full vs. whole note wording.
        add 1/32, 1/64, 1/128 quantization boundaries.

        * beast-gtk/icons/Makefile.am:
        * beast-gtk/icons/note-32.png:
        * beast-gtk/icons/note-64.png:
        * beast-gtk/icons/note-128.png:
        * beast-gtk/icons/qnote-32.png:
        * beast-gtk/icons/qnote-64.png:
        * beast-gtk/icons/qnote-128.png:
        * beast-gtk/icons/notes.xcf:
        added new stock icons.

svn path=/trunk/; revision=2185

--- a/beast-gtk/icons/Makefile.am
+++ b/beast-gtk/icons/Makefile.am
@@ -68,6 +68,9 @@ STOCK_IMAGE_DEFS = @STRIP_BEGIN@ \
 	STOCK_NOTE_4			$(srcdir)/note-4.png		\
 	STOCK_NOTE_8			$(srcdir)/note-8.png		\
 	STOCK_NOTE_16			$(srcdir)/note-16.png		\
+	STOCK_NOTE_32			$(srcdir)/note-32.png		\
+	STOCK_NOTE_64			$(srcdir)/note-64.png		\
+	STOCK_NOTE_128			$(srcdir)/note-128.png		\
 	STOCK_PALETTE			$(srcdir)/palette.png		\
 	STOCK_PART			$(srcdir)/part.png		\
 	STOCK_PART_TEXT			$(srcdir)/part-text.png		\
@@ -88,6 +91,9 @@ STOCK_IMAGE_DEFS = @STRIP_BEGIN@ \
 	STOCK_QNOTE_4			$(srcdir)/qnote-4.png		\
 	STOCK_QNOTE_8			$(srcdir)/qnote-8.png		\
 	STOCK_QNOTE_16			$(srcdir)/qnote-16.png		\
+	STOCK_QNOTE_32			$(srcdir)/qnote-32.png		\
+	STOCK_QNOTE_64			$(srcdir)/qnote-64.png		\
+	STOCK_QNOTE_128			$(srcdir)/qnote-128.png		\
 	STOCK_RECT_SELECT		$(srcdir)/rect-select.png	\
 	STOCK_REPEAT			$(srcdir)/repeat.png		\
 	STOCK_TARGET			$(srcdir)/target.png		\
