adapt macro references to contents of beast-gtk/dialogs/beast-xml-zfiles.c
Tue Jun 22 14:06:42 2004  Tim Janik  <timj@gtk.org>

        * beast-gtk/bstutils.c: adapt macro references to contents of
        beast-gtk/dialogs/beast-xml-zfiles.c which use RADGET instead
        of GADGET now.

        * beast-gtk/dialogs/gadgets-beast.xml:
        * beast-gtk/dialogs/gadgets-standard.xml:
        * beast-gtk/dialogs/Makefile.am: include ragdet*xml files, deleted
        gadget*xml files.

        * beast-gtk/gxk/gxkgadget.h:
        * beast-gtk/gxk/gxkgadget.c:
        * beast-gtk/gxk/gxkgadgetfactory.h:
        * beast-gtk/gxk/gxkgadgetfactory.c:
        * beast-gtk/gxk/Makefile.am: use *radget* sources, deleted
        *gadget* sources.

        * beast-gtk/gxk/gxkauxwidgets.h:
        * beast-gtk/gxk/gxkdialog.c:
        * beast-gtk/gxk/gxkradget.c:
        * beast-gtk/gxk/gxkradgetfactory.c:
        * beast-gtk/gxk/gxkradgetfactory.h:
        * beast-gtk/gxk/gxktexttools.c:
        * beast-gtk/gxk/gxk.h: include *radget* sources instead of
        *gadget* source files.

svn path=/trunk/; revision=2221

--- a/beast-gtk/dialogs/Makefile.am
+++ b/beast-gtk/dialogs/Makefile.am
@@ -5,8 +5,8 @@
 
 
 ZFILE_DEFS = $(strip \
-	BST_GADGETS_STANDARD	$(srcdir)/gadgets-standard.xml	\
-	BST_GADGETS_BEAST	$(srcdir)/gadgets-beast.xml	\
+	BST_RADGETS_STANDARD	$(srcdir)/radgets-standard.xml	\
+	BST_RADGETS_BEAST	$(srcdir)/radgets-beast.xml	\
 )
 XML_FILES  = $(filter-out BST_%, $(ZFILE_DEFS))
 EXTRA_DIST = $(XML_FILES)
