added $LIBZ to $GXK_LIBS, since sooner or later we need libgxk to
Fri Jul  2 02:24:13 2004  Tim Janik  <timj@gtk.org>

        * configure.in: added $LIBZ to $GXK_LIBS, since sooner or later we need
        libgxk to explicitely depend on libz anyways, and -lz was missing when
        linking gxktest.

svn path=/trunk/; revision=2250

--- a/configure.in
+++ b/configure.in
@@ -325,7 +325,7 @@ AC_DEFUN(AC_GXK_REQUIREMENTS,
     PKG_CHECK_MODULES(GUI, $DEPENDANCIES)
     
     GXK_CFLAGS="$GUI_CFLAGS"
-    GXK_LIBS="$GUI_LIBS"
+    GXK_LIBS="$GUI_LIBS $LIBZ"
     AC_SUBST(GXK_CFLAGS)
     AC_SUBST(GXK_LIBS)
 ])
