added support for song busses.
Mon Jul  5 08:55:53 2004  Tim Janik  <timj@gtk.org>

        * bsesong.[hcp]: added support for song busses.

        * bsesongbus.[hc]: new source, intended to be used for
        mixing song tracks.

svn path=/trunk/; revision=2258

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -41,7 +41,7 @@ libbse_la_LIBADD = $(top_builddir)/sfi/libsfi.la $(BSE_LIBS) -lm
 bse_public_h_sources = $(strip \
 	bse.h	bsedefs.h	bseexports.h	bseconfig.h	bsegenclosures.h \
 	bseincluder.h	ladspa.h	\
-				            		bsebiquadfilter.h		bsecategories.h \
+	bsesongbus.h		            		bsebiquadfilter.h		bsecategories.h \
 	bseconstant.h		bseconstvalues.h	bsecontainer.h			bsecontextmerger.h \
 	bsedatapocket.h		bseeditablesample.h	bseenums.h			bsegconfig.h \
 	bseglobals.h		bseglue.h		bseitem.h			bsejanitor.h \
@@ -68,7 +68,7 @@ bse_private_h_sources = $(strip \
 # BSE C sources to build the library from
 bse_c_sources = $(strip \
 	$(GSL_C_SRC) \
-				            		bsebiquadfilter.c		bsecategories.c \
+	bsesongbus.c		            		bsebiquadfilter.c		bsecategories.c \
 	bseconstant.c		bseconstvalues.c	bsecontainer.c			bsecontextmerger.c \
 	bsedatapocket.c		bseeditablesample.c	bseenums.c			bsegconfig.c \
 	bseglobals.c		bseglue.c		bseitem.c			bsejanitor.c \
