--- a/bse/icons/Makefile.am
+++ b/bse/icons/Makefile.am
@@ -12,6 +12,7 @@ EXTRA_IMAGES = $(strip		\
 	osc.xcf			\
 	snet.xcf		\
 	song.xcf		\
+	summation.xcf		\
 	virtual.xcf		\
 	ball.xcf		\
 	disconnect.xcf		\
@@ -26,6 +27,7 @@ EXTRA_IMAGES = $(strip		\
 # images that need to be shipped, but no C source nees to be build from
 SHIP_IMAGES = $(strip		\
 	ampctrl.png		\
+	summation.png		\
 )
 
 # source images to build C source from
